# animeflv-discord

./: Cargo.toml  Dockerfile  Readme.md  anime.json  animeflv.html  docker-compose.yml
src/: _main.rs.bckp  main.rs
