[package]
name = "animeflv-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies", "json"] }
scraper = "0.13.0"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = "*"
serde_json = "1.0"