[package]
name = "animeflv-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "cookies", "json"] }
scraper = "0.13.0"
futures = { version = "0.3.*" }
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = "*"
serde_json = "1.0"
json = "0.12.4"
unicode-segmentation = "1.10.0"